<resources>
    <string name="app_name">My Albums</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="notifications">Notifications</string>
    <string name="apply">Apply</string>
    <string name="albumId">Album with id: %1$s</string>
    <string name="photoId">Photo with id: %1$s</string>
    <string name="details">Details</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="photos">Photos</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="contact_info">Contact Info</string>

    <!--Contact info screen-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="use_location">Use my location</string>
    <string name="required_field">Required Field!</string>
    <string name="info_saved">Info saved!</string>
    <string name="permission_denied">Location Permission is not granted</string>
    <string name="permission_granted">Permission granted</string>
    <string name="no_location">No location found!</string>
    <string name="coming_soon">Coming soon</string>

</resources>