<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myalbums.ui.home_screen.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_albumDetailsFragment"
            app:destination="@id/albumDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.example.myalbums.ui.friends_screen.FriendsFragment"
        android:label="@string/friends">
        <action
            android:id="@+id/goToComingSoon"
            app:destination="@id/comingSoonFragment"
            app:popUpTo="@id/bottom_nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.myalbums.ui.news_screen.NewsFragment"
        android:label="@string/news" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myalbums.ui.profile_screen.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_profileFragment_to_contactDetailsActivity"
            app:destination="@id/contactDetailsActivity" />
    </fragment>
    <fragment
        android:id="@+id/albumDetailsFragment"
        android:name="com.example.myalbums.ui.album_details.AlbumDetailsFragment"
        android:label="@string/details">
        <argument
            android:name="album"
            app:argType="com.example.myalbums.models.Album"
            app:nullable="true" />
        <action
            android:id="@+id/action_albumDetailsFragment_to_bottom_nav_graph"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popExitAnim="@animator/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/contactDetailsActivity"
        android:name="com.example.myalbums.ui.contact_info.ContactDetailsActivity"
        android:label="activity_contact_details"
        app:data=" "
        tools:layout="@layout/activity_contact_details" />
    <fragment
        android:id="@+id/comingSoonFragment"
        android:name="com.example.myalbums.ui.ComingSoonFragment"
        android:label="@string/coming_soon"
        tools:layout="@layout/fragment_coming_soon" />
</navigation>